--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -6,20 +6,18 @@ bootstrap, so they may override it's behavior.
 /* Overthrow CSS:
    Enable overflow: auto on elements with overthrow class when html element has overthrow class too.
    See: https://github.com/filamentgroup/Overthrow */
-.overthrow-enabled .overthrow {
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-}
+.overthrow-enabled .overthrow 
+    overflow: auto
+    -webkit-overflow-scrolling: touch
 
 // Footer
-.footer {
-  background-color: whitesmoke;
-  padding: 30px 0;
-  /* .box-shadow(inset 0 5px 15px rgba(0, 0, 0, .025)); */
-}
+.footer 
+  background-color: whitesmoke
+  padding: 30px 0
+  /* .box-shadow(inset 0 5px 15px rgba(0, 0, 0, .025)) */
 
 // Application styles
-.donetrue {
-  text-decoration: line-through;
-  color: grey;
-}
+.donetrue 
+  text-decoration: line-through
+  color: grey
+
