--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1,23 +1,12 @@
-/*!
- * Bootstrap v3.0.0
- *
- * Copyright 2013 Twitter, Inc
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Designed and built with all the love in the world by @mdo and @fat.
- */
-
-// Core variables and mixins
+// Bootstrap Core variables and mixins
 @import "/bower_components/bootstrap-stylus/stylus/variables"
-@import "_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
-// Reset
+// Bootstrap Reset
 @import "/bower_components/bootstrap-stylus/stylus/normalize"
 @import "/bower_components/bootstrap-stylus/stylus/print"
 
-// Core CSS
+// Bootstrap Core CSS
 @import "/bower_components/bootstrap-stylus/stylus/scaffolding"
 @import "/bower_components/bootstrap-stylus/stylus/type"
 @import "/bower_components/bootstrap-stylus/stylus/code"
@@ -26,9 +15,8 @@
 @import "/bower_components/bootstrap-stylus/stylus/forms"
 @import "/bower_components/bootstrap-stylus/stylus/buttons"
 
-// Components
+// Bootstrap Components
 @import "/bower_components/bootstrap-stylus/stylus/component-animations"
-@import "/bower_components/font-awesome/css/font-awesome.css"
 @import "/bower_components/bootstrap-stylus/stylus/dropdowns"
 @import "/bower_components/bootstrap-stylus/stylus/button-groups"
 @import "/bower_components/bootstrap-stylus/stylus/input-groups"
@@ -49,16 +37,17 @@
 @import "/bower_components/bootstrap-stylus/stylus/wells"
 @import "/bower_components/bootstrap-stylus/stylus/close"
 
-// Components w/ JavaScript
+// Bootstrap Components w/ JavaScript
 @import "/bower_components/bootstrap-stylus/stylus/modals"
 @import "/bower_components/bootstrap-stylus/stylus/tooltip"
 @import "/bower_components/bootstrap-stylus/stylus/popovers"
 @import "/bower_components/bootstrap-stylus/stylus/carousel"
 
-// Utility classes
+// Bootstrap Utility classes
 @import "/bower_components/bootstrap-stylus/stylus/utilities"
 @import "/bower_components/bootstrap-stylus/stylus/responsive-utilities"
 
 // Your custom theme
 @import "_overrides"
+@import "_variables"
 @import "animation"
