--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1,3 +1,5 @@
+@import "/bower_components/font-awesome/css/font-awesome.css"
+
 // Bootstrap Core variables and mixins
 @import "/bower_components/bootstrap-stylus/stylus/variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
