--- a/app/partials/index.jade
+++ b/app/partials/index.jade
@@ -2,4 +2,7 @@
 p
   i.icon-question-sign
   = "fa-camera-retro"
-.btn.btn-primary= "Hello world"
+.btn.btn-primary= "Hello world2"
+
+p= "{{ 'partials.terms.title' | translate }}"
+p= "{{ 'partials.terms.title1' | translate }}"
