create footer and schedules index page

--- a/app/index.jade
+++ b/app/index.jade
@@ -29,3 +29,5 @@ html(ng-app="app")
     script(type='text/javascript', src='js/vendor.js')
     script(type='text/javascript', src='js/partials.js')
     script(type='text/javascript', src='js/app.js')
+    include partials/footer
+
