--- a/app/partials/footer.jade
+++ b/app/partials/footer.jade
@@ -1,12 +1,12 @@
 .footer
   .container
     .row
-      .widgets.col-md-4
+      .widgets.col-md-4.text-center
         img(src='http://promakh.ru/share/s-widgets.png')
-      .navigation.col-md-4
+      .navigation.col-md-4.text-center
         ul.list-inline
           li= "{{ 'layouts.main.about'| translate }}"
           li= "{{ 'layouts.main.terms'| translate }}"
           li
             a(href='/humans.txt')= "{{ 'layouts.main.authors'| translate }}"
-      .copyright.col-md-4.text-right= "©2013 StudyTime.me"
+      .copyright.col-md-4.text-center= "©2013 StudyTime.me"
