--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -1,7 +1,8 @@
 //
 // Variables
+$footer-height ?= 80px;
+$theme-color ?= #ff5900;
 // --------------------------------------------------
-
 
 // Global values
 // --------------------------------------------------
@@ -119,7 +120,8 @@ $btn-success-bg ?=                 $brand-success;
 $btn-success-border ?=             darken($btn-success-bg, 5%);
 
 $btn-warning-color ?=              #fff;
-$btn-warning-bg ?=                 $brand-warning;
+$btn-warning-bg ?=                 $theme-color;
+/*$btn-warning-bg ?=                 $brand-warning;*/
 $btn-warning-border ?=             darken($btn-warning-bg, 5%);
 
 $btn-danger-color ?=               #fff;
