--- a/app/styles/schedules.styl
+++ b/app/styles/schedules.styl
@@ -1,11 +1,13 @@
 @import _variables
 
 #schedule-index
-  .groups
-    width 900px
-    margin: auto
-    overflow: hidden
-    .group
+  > .title
+    margin-bottom: 40px
+  .course
+    margin-bottom: 10px
+    .course-content
       background: $panel-footer-bg
-      width: 187px
-      margin: 0 14px 14px 0
+      overflow: hidden
+      padding: 0 15px 15px
+      .line
+        line-height: 30px
