--- a/app/partials/schedules/index.jade
+++ b/app/partials/schedules/index.jade
@@ -1,5 +1,11 @@
 .container#schedule-index
-  h1.text-center {{ 'schedules.index.choose_group' | translate }}
-  .groups
-    .group.pull-left(ng-repeat='(name, values) in groups')
-      {{ name }}
+  h2.text-center.title {{ 'schedules.index.choose_group' | translate }}
+  .row
+    .col-md-offset-1.col-md-10
+      .course.col-md-3(ng-repeat='(name, values) in groups')
+        .course-content
+          h3.text-center {{ name }}
+          .groups
+            .line(ng-repeat='line in values')
+              .group.col-md-4(ng-repeat='group in line')
+                {{ group }}
