--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -1,3 +1,4 @@
+@import _variables
 /*
 Place custom styles here. These styles should loaded after
 bootstrap, so they may override it's behavior.
@@ -6,18 +7,41 @@ bootstrap, so they may override it's behavior.
 /* Overthrow CSS:
    Enable overflow: auto on elements with overthrow class when html element has overthrow class too.
    See: https://github.com/filamentgroup/Overthrow */
-.overthrow-enabled .overthrow 
-    overflow: auto
-    -webkit-overflow-scrolling: touch
+.overthrow-enabled .overthrow
+  overflow: auto
+  -webkit-overflow-scrolling: touch
 
 // Footer
-.footer 
-  background-color: whitesmoke
-  padding: 30px 0
-  /* .box-shadow(inset 0 5px 15px rgba(0, 0, 0, .025)) */
+.footer
+  border-top: 1px solid $panel-inner-border
+  /*background-color: whitesmoke*/
+  padding: 10px 0
+
+/* .box-shadow(inset 0 5px 15px rgba(0, 0, 0, .025)) */
 
 // Application styles
-.donetrue 
+.donetrue
   text-decoration: line-through
   color: grey
 
+ul
+  padding-left: 0
+
+// Bottom footer
+
+
+html, body
+  height: 100%
+
+#wrap
+  min-height: 100%
+
+.ngc-view
+  overflow: auto
+  padding-bottom: $footer-height
+
+.footer
+  position: relative
+  margin-top: - $footer-height
+  height: $footer-height
+  clear: both
