groups template compatible with api v2

--- a/app/partials/schedules/index.jade
+++ b/app/partials/schedules/index.jade
@@ -8,4 +8,4 @@
           .groups
             .line(ng-repeat='line in values')
               .group.col-md-4(ng-repeat='group in line')
-                {{ group }}
+                {{ group.name }}
