--- a/app/index.jade
+++ b/app/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(ng-app="app")
+html(ng-app="app", ng-cloak)
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
