--- a/app/index.jade
+++ b/app/index.jade
@@ -17,6 +17,15 @@ html(ng-app="app", ng-cloak)
 
     link(rel="stylesheet", href="css/app.css")
     script.
+      function onUpdateReady() {
+        alert('found new version!');
+      }
+
+      window.applicationCache.addEventListener('updateready', onUpdateReady);
+      if(window.applicationCache.status === window.applicationCache.UPDATEREADY) {
+        onUpdateReady();
+      }
+
       window.brunch = window.brunch || {};
       window.brunch['auto-reload'] = {
           enabled: true
