--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -14,6 +14,6 @@
       display inline-block
       border-bottom: 2px solid #fff
       padding 25px 20px 20px
-      &:active, &:hover
+      &:active, &:hover, &.active
         color: $theme-color
         border-bottom: 2px solid $theme-color
