add bootstrap navigation

--- a/app/index.jade
+++ b/app/index.jade
@@ -22,9 +22,9 @@ html(ng-app="app", ng-cloak)
           enabled: true
       };
   body
+    include partials/header
     #wrap
-      include partials/header
-      .ngc-view
+      .ngc-view.overthrow
     include partials/footer
 
     //<script type="text/javascript" src="phonegap.js"></script>
