--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,16 +1,14 @@
-.header
-    .container
-        .row.text-right
-            .col-md-4.text-center
-                h2.site-name
-                    a(href='/') {{ 'layouts.main.site_name' | translate }}
-            .col-md-6.text-center
-                ul.navigation
-                    li(ng-class='{active: $location.path() == "/" || $routeParams.groupName}')
-                        a(href='/') {{ 'layouts.main.navigation.shedule' | translate }}
-                    li(ng-class='{active: $location.path() == "/places"}')
-                        a(href='/places') {{ 'layouts.main.navigation.auditoriums' | translate }}
-                    li(ng-class='{active: $location.path() == "/courses"}')
-                        a(href='/courses') {{ 'layouts.main.navigation.cources' | translate }}
-            .col-md-1.session-btns.text-center
-                .btn.btn-warning {{ 'buttons.sign_in' | translate }}
+header.header
+  .container
+    .navbar.navbar-default
+      .collapse.navbar-collapse
+        a.navbar-brand(href="#") {{ 'layouts.main.site_name' | translate }}
+        form.navbar-form.navbar-right
+          .btn.btn-warning {{ 'buttons.sign_in' | translate }}
+        ul.nav.navbar-nav.navbar-right
+          li(ng-class='{active: $location.path() == "/" || $routeParams.groupName}')
+              a(href='/') {{ 'layouts.main.navigation.shedule' | translate }}
+          li(ng-class='{active: $location.path() == "/places"}')
+              a(href='/places') {{ 'layouts.main.navigation.auditoriums' | translate }}
+          li(ng-class='{active: $location.path() == "/courses"}')
+              a(href='/courses') {{ 'layouts.main.navigation.cources' | translate }}
