--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -34,19 +34,21 @@ ul
 
 // Bottom footer
 
+/*html, body*/
+/*height: 100%*/
 
 html, body
   height: 100%
 
-#wrap
-  min-height: 100%
-
-.ngc-view
-  overflow: auto
-  padding-bottom: $footer-height
-
-.footer
-  position: relative
-  margin-top: - $footer-height
-  height: $footer-height
-  clear: both
+/*#wrap*/
+/*min-height: 100%*/
+/**/
+/*.ngc-view*/
+/*overflow: auto*/
+/*padding-bottom: $footer-height*/
+/**/
+/*.footer*/
+/*position: relative*/
+/*margin-top: - $footer-height*/
+/*height: $footer-height*/
+/*clear: both*/
