added mobile view of the index

--- a/app/index.jade
+++ b/app/index.jade
@@ -23,8 +23,8 @@ html(ng-app="app", ng-cloak)
       };
   body
     include partials/header
-    #wrap
-      .ngc-view.overthrow
+    #wrap.overthrow
+      .ngc-view
     include partials/footer
 
     //<script type="text/javascript" src="phonegap.js"></script>
