--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -8,13 +8,13 @@ bootstrap, so they may override it's behavior.
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
   display: none !important
 
-
 /* Overthrow CSS:
    Enable overflow: auto on elements with overthrow class when html element has overthrow class too.
-   See: https://github.com/filamentgroup/Overthrow */
+   See: https://github.com/filamentgroup/Overthrow
 .overthrow-enabled .overthrow
   overflow: auto
   -webkit-overflow-scrolling: touch
+*/
 
 // Footer
 .footer
@@ -34,21 +34,40 @@ ul
 
 // Bottom footer
 
-/*html, body*/
-/*height: 100%*/
-
 html, body
   height: 100%
 
-/*#wrap*/
-/*min-height: 100%*/
-/**/
-/*.ngc-view*/
-/*overflow: auto*/
-/*padding-bottom: $footer-height*/
-/**/
-/*.footer*/
-/*position: relative*/
-/*margin-top: - $footer-height*/
-/*height: $footer-height*/
-/*clear: both*/
+#wrap
+  min-height: 100%
+
+.ngc-view
+  padding-bottom: $footer-height
+
+.footer
+  position: relative
+  margin-top: - $footer-height
+  height: $footer-height
+  clear: both
+
+@media (max-width: 768px)
+  .footer
+    display none
+
+  .overthrow-enabled
+    .header
+      position: absolute
+      top 0
+      left 0
+      right 0
+
+    #wrap
+      min-height 0
+
+    .overthrow
+      overflow auto
+      -webkit-overflow-scrolling touch
+      position absolute
+      top $navbar-height
+      bottom $navbar-height
+      left 0
+      right 0
