--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -50,6 +50,11 @@ html, body
   clear: both
 
 @media (max-width: 768px)
+  html
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+
   .footer
     display none
 
