--- a/app/index.jade
+++ b/app/index.jade
@@ -4,6 +4,8 @@ html(ng-app="app", ng-cloak)
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='format-detection', content='telephone=no')
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-touch-fullscreen", content="yes")
     meta(name="viewport", content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width")
 
     meta(name='description', content='')
