--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -51,9 +51,15 @@ html, body
 
 @media (max-width: 768px)
   html
-    height: 100%;
-    width: 100%;
+    margin:0;
+    padding:0;
     overflow: hidden;
+
+  body
+    position: absolute;
+    width:100%;
+    height:100%;
+    overflow: auto;
 
   .footer
     display none
