disable scrolling bounce of body

--- a/app/index.jade
+++ b/app/index.jade
@@ -27,7 +27,7 @@ html(ng-app="app", ng-cloak)
       };
   body
     include partials/header
-    #wrap.overthrow
+    #wrap.overthrow.non-bounce
       .ngc-view
     include partials/footer
 
