--- a/app/index.jade
+++ b/app/index.jade
@@ -7,7 +7,7 @@ html(ng-app="app", ng-cloak)
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-touch-fullscreen", content="yes")
     meta(name="mobile-web-app-capable", content="yes")
-    meta(name="apple-mobile-web-app-status-bar-style", content="white")
+    meta(name="apple-mobile-web-app-status-bar-style", content="black")
     meta(name="viewport", content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width")
 
     meta(name='description', content='')
