--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -41,6 +41,7 @@ html, body
   height: $footer-height
   clear: both
 
+// todo make $screen-tablet
 @media (max-width: 768px)
   html
     margin:0;
