--- a/app/index.jade
+++ b/app/index.jade
@@ -28,8 +28,7 @@ html(ng-app="app", ng-cloak)
       };
   body
     include partials/header
-    #wrap.overthrow.non-bounce
-      .ngc-view
+    #wrap(ngc-view)
     include partials/footer
 
     //<script type="text/javascript" src="phonegap.js"></script>
