--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,19 +1,22 @@
 header.header
-    .navbar.navbar-default
+    .navbar.navbar-default(role="navigation")
         .container
-            .collapse.navbar-collapse
-                a.navbar-brand(href="#") {{ 'layouts.main.site_name' | translate }}
+            .navbar-header
+                a.navbar-brand(href="#")
+                    span {{ 'layouts.main.site_name' | translate }}
+            div
                 form.navbar-form.navbar-right
                     .btn.btn-warning {{ 'buttons.sign_in' | translate }}
                 ul.nav.navbar-nav.navbar-right
                     li(ng-class='{active: $location.path() == "/" || $routeParams.groupName}')
-                        a(href='/') {{ 'layouts.main.navigation.shedule' | translate }}
+                        a(href='/')
+                            i.fa.fa-calendar.fa-2x
+                            span {{ 'layouts.main.navigation.shedule' | translate }}
                     li(ng-class='{active: $location.path() == "/places"}')
-                        a(href='/places') {{ 'layouts.main.navigation.auditoriums' | translate }}
+                        a(href='/places')
+                            i.fa.fa-crosshairs.fa-2x
+                            span {{ 'layouts.main.navigation.auditoriums' | translate }}
                     li(ng-class='{active: $location.path() == "/courses"}')
-                        a(href='/courses') {{ 'layouts.main.navigation.cources' | translate }}
-            .mobile-navbar
-                .navbar-brand
-                    i.fa.fa-lg(class='{{mobileHeader.backBtn.icon}}')
-                    a(href="#") {{ mobileHeader.backBtn.title }}
-                h3.text-center {{ mobileHeader.title }}
+                        a(href='/courses')
+                            i.fa.fa-calendar.fa-2x
+                            span {{ 'layouts.main.navigation.cources' | translate }}
