--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -204,10 +204,12 @@ $zindex-modal ?=             1050;
 // Extra small screen / phone
 $screen-xs ?=                  480px;
 $screen-phone ?=               $screen-xs;
+$screen-phone-media-q ?=       "(max-width: " + $screen-phone + ")"
 
 // Small screen / tablet
 $screen-sm ?=                  768px;
 $screen-tablet ?=              $screen-sm;
+$screen-tablet-media-q ?=      "(max-width: " + $screen-tablet + ")"
 
 // Medium screen / desktop
 $screen-md ?=                  992px;
