--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -1,28 +1,24 @@
 @import _variables
-/*
-Place custom styles here. These styles should loaded after
-bootstrap, so they may override it's behavior.
-*/
+
 
 // Needed for ng-cloak work
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
-  display: none !important
+  display none !important
 
 html, body
-  height: 100%
+  height 100%
 
 #wrap
-  min-height: 100%
+  min-height 100%
 
 .footer
   position: relative
-  margin-top: - $footer-height
   height: $footer-height
   clear: both
   border-top: 1px solid $panel-inner-border
   padding: 10px 0
 
-// todo make $screen-tablet
-@media (max-width: 768px)
+
+@media $screen-tablet-media-q
   .footer
     display none
