fixed cloak directive location

--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -1,9 +1,7 @@
 @import _variables
-
-
-// Needed for ng-cloak work
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
-  display none !important
+k
+[ng\:cloak], [ng-cloak], .ng-cloak
+  display: none;
 
 html, body
   height 100%
@@ -17,7 +15,6 @@ html, body
   clear: both
   border-top: 1px solid $panel-inner-border
   padding: 10px 0
-
 
 @media $screen-tablet-media-q
   .footer
