--- a/app/index.jade
+++ b/app/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(ng-app="app", ng-cloak)
+html(ng-app="app")
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
@@ -28,7 +28,7 @@ html(ng-app="app", ng-cloak)
       };
   body
     include partials/header
-    #wrap(ngc-view)
+    #wrap(ngc-view, ng-cloak)
     include partials/footer
 
     //<script type="text/javascript" src="phonegap.js"></script>
