--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,4 +1,4 @@
-header.header
+header(ng-cloak).header
     .navbar.navbar-default(role="navigation")
         .container
             .navbar-header
