--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,4 +1,4 @@
-header(ng-cloak).header
+header.header.ng-cloak
     .navbar.navbar-default(role="navigation")
         .container
             .navbar-header
