--- a/app/index.jade
+++ b/app/index.jade
@@ -28,7 +28,7 @@ html(ng-app="app")
       };
   body
     include partials/header
-    #wrap(ngc-view).ng-cloak
+    #wrap(ngc-view).ngcloak
     include partials/footer
 
     //<script type="text/javascript" src="phonegap.js"></script>
