--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -13,7 +13,7 @@
       right 0
       left 0
       z-index $zindex-navbar-fixed
-      height $navbar-height * 0.6
+      height $navbar-height+2
 
     .navbar-form
         display none
@@ -32,12 +32,14 @@
       margin 0
       i.fa
         display block
+        line-height 1.2em
+        font-size 2.4em
       li
         text-align center
         float left
         a
           margin 0
-          padding 1em 0.5em
+          padding 0.7em 0.5em
           background none !important
           font-size 0.7em
           line-height 1.3em
