changed ng-cloak to transition hack

--- a/app/index.jade
+++ b/app/index.jade
@@ -27,9 +27,10 @@ html(ng-app="app")
           enabled: true
       };
   body
-    include partials/header
-    #wrap(ngc-view).ng-cloak
-    include partials/footer
+    div(ng-class="{'opacity-shower-end':true}").opacity-shower-start
+        include partials/header
+        #wrap(ngc-view).ng-cloak
+        include partials/footer
 
     //<script type="text/javascript" src="phonegap.js"></script>
     script(type='text/javascript', src='js/vendor.js')
