--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,4 +1,4 @@
-header.header.ng-cloak
+header.header
     .navbar.navbar-default(role="navigation")
         .container
             .navbar-header
