--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -1,7 +1,13 @@
 @import _variables
+@import "/bower_components/bootstrap-stylus/stylus/mixins"
 
-[ng\:cloak], [ng-cloak], .ng-cloak
-  display: none;
+.opacity-shower-start {
+  opacity 0
+  transition(opacity 1s ease)
+}
+.opacity-shower-end {
+  opacity 1
+}
 
 html, body
   height 100%
