overthrow and non-bounce moved back and improved foxed footer on desktop

--- a/app/partials/courses/index.jade
+++ b/app/partials/courses/index.jade
@@ -1,4 +1,5 @@
-.schedule-header
-    .container Верхняя панелька
+.overthrow.non-bounce
+    .schedule-header
+        .container Верхняя панелька
 
-.container Список спецкурсов
+    .container Список спецкурсов
