--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -14,9 +14,9 @@ header.header.ng-cloak
                             span {{ 'layouts.main.navigation.shedule' | translate }}
                     li(ng-class='{active: $location.path() == "/places"}')
                         a(href='/places')
-                            i.fa.fa-crosshairs.fa-2x
+                            i.fa.fa-map-marker.fa-2x
                             span {{ 'layouts.main.navigation.auditoriums' | translate }}
                     li(ng-class='{active: $location.path() == "/courses"}')
                         a(href='/courses')
-                            i.fa.fa-calendar.fa-2x
+                            i.fa.fa-rocket.fa-2x
                             span {{ 'layouts.main.navigation.cources' | translate }}
