--- a/app/index.jade
+++ b/app/index.jade
@@ -31,7 +31,7 @@ html(ng-app="app")
     #wrap.ngc-view.ng-cloak
     include partials/footer
 
-    //<script type="text/javascript" src="phonegap.js"></script>
+    //script(type='text/javascript', src="phonegap.js")
     script(type='text/javascript', src='js/vendor.js')
     script(type='text/javascript', src='js/partials.js')
     script(type='text/javascript', src='js/app.js')
