--- a/app/partials/places/index.jade
+++ b/app/partials/places/index.jade
@@ -1,4 +1,5 @@
-.schedule-header
-    .container Верхняя панелька
+.overthrow.non-bounce
+    .schedule-header
+        .container Верхняя панелька
 
-div(ng-include, src="'app/partials/places/schedule.jade'")
+        div(ng-include, src="'app/partials/places/schedule.jade'")
