--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -5,20 +5,41 @@
   display: none !important;
 }
 
-html, body
+html
   height 100%
+body
+  min-height 100%
+  position relative
 
 #wrap
-  min-height 100%
+  padding-bottom $footer-height + 20
 
 .footer
-  position relative
+  position absolute
+  bottom 0
+  left 0
+  right 0
   height $footer-height
-  margin -($footer-height) 0 0 0
+  margin 0
   clear both
   border-top 1px solid $panel-inner-border
   padding 10px 0
 
+
 @media $screen-tablet-media-q
   .footer
     display none
+
+  #wrap
+    min-height 0 !important
+    height auto !important
+
+  .overthrow-enabled
+    .overthrow
+      overflow auto;
+      -webkit-overflow-scrolling touch;
+      position absolute
+      top $navbar-height
+      left 0
+      right 0
+      bottom 0
