--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -29,6 +29,9 @@
 
     .nav
       margin 0
+      position absolute
+      left 55px
+      right 0
       i.fa
         display block
         line-height 1.2em
@@ -36,6 +39,7 @@
       li
         text-align center
         float left
+        width 33.3333333%
         a
           margin 0
           padding 0.7em 0.5em
