overthrow used only when standalone application

--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -34,7 +34,7 @@ body
     min-height 0 !important
     height auto !important
 
-  .overthrow-enabled
+  .overthrow-enabled.standalone
     .overthrow
       overflow auto;
       -webkit-overflow-scrolling touch;
