--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -5,11 +5,15 @@
   i.fa
     display none
 
+.header
+  .navbar
+    margin 0
 
 @media $screen-tablet-media-q
   .header
     .navbar
       height $navbar-height+2
+      margin 0
 
     .navbar-form
         display none
