groups index style changed

--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -16,9 +16,12 @@
         display table-cell
         border: 5px solid #fff
         background: $panel-footer-bg
+        h3
+          padding 15px 0 0 0
+          margin 0
         .course-content
           overflow: hidden
-          padding: 15px
+          padding: 10px 15px 15px 15px
           .line
             overflow: hidden
             .group
@@ -44,7 +47,7 @@
       .speciality
         border none
         h3
-          padding 15px 20px 9px
+          padding 15px !important
           border-bottom 1px solid #ddd
           margin 0
           background #fff
