hacky fix webkit overflow scroll

--- a/app/partials/courses/index.jade
+++ b/app/partials/courses/index.jade
@@ -1,5 +1,6 @@
 .overthrow.non-bounce
-    .schedule-header
-        .container Верхняя панелька
+    .animated-view
+        .schedule-header
+            .container Верхняя панелька
 
-    .container Список спецкурсов
+        .container Список спецкурсов
