--- a/app/partials/places/index.jade
+++ b/app/partials/places/index.jade
@@ -1,5 +1,6 @@
 .overthrow.non-bounce
-    .schedule-header
-        .container Верхняя панелька
+    .animated-view
+        .schedule-header
+            .container Верхняя панелька
 
-        div(ng-include, src="'app/partials/places/schedule.jade'")
+            div(ng-include, src="'app/partials/places/schedule.jade'")
